# EAL

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  Plot.cc  README.md  cmake_install.cmake  compile_commands.json  load.cc  readjson.cc  test
Debug/: Doxyfile.doxygen  Makefile  cmake_install.cmake  compile_commands.json
Debug/app/: Makefile  cmake_install.cmake
EAL/: Analysis.cc  Analysis.h  EAL.cc  Functions.h  Training.h
TMVAoutput/weights/: TMVAClassification_BDT.class.C  TMVAClassification_BDT.weights.xml  TMVAClassification_DNN_GPU.weights.xml
TMVAoutput_SBtmva/weights/: TMVAClassification_BDT.weights.xml
app/: CMakeLists.txt  EALapplication  EALapplication.cc  Makefile  app.cc  cmake_install.cmake
bld/: CMakeCache.txt  Makefile  cmake_install.cmake
data/: cuts.json  dataset.json  dataset_2016.xml
data/config/: TMVA_settings.json  TMVA_settings_boosted.json  TMVA_settings_resolved.json  anl_config.yaml  dataset.json  dataset_2016.json  dataset_2016_oldstyle.json  dataset_2017.json  dataset_2018.json  new_dataset_2016.json  spare_MVA_methods.json  test.yaml  test2.yaml
data/junk/: event_counts.txt  junk_text.txt
dataset/weights/: TMVAClassification_BDT.class.C  TMVAClassification_BDT.weights.xml  TMVAClassification_DNN_GPU.class.C  TMVAClassification_DNN_GPU.weights.xml
docs/: index.html
docs/Project/: Outline.md
docs/ROC/: Methods.md  Methods.txt
docs/html/: Analysis_8h_source.html  EAL_8cc.html  EAL_8h.html  EAL_8h_source.html  Preprocessing_8h_source.html  Process_8h_source.html  Sample_8h.html  Sample_8h_source.html  Samples_8h.html  Samples_8h_source.html  Training_8h_source.html  XMLInterface_8h_source.html  annotated.html  classA.html  classAnalysis-members.html  classAnalysis.html  classEAL_1_1BackgroundSample.html  classEAL_1_1Process-members.html  classEAL_1_1Process.html  classEAL_1_1Sample-members.html  classEAL_1_1Sample.html  classEAL_1_1XML_1_1XMLDocument-members.html  classEAL_1_1XML_1_1XMLDocument.html  classEAL_1_1testClass-members.html  classEAL_1_1testClass.html  classProcess.html  classTMVAMethod-members.html  classTMVAMethod.html  classTMVATraining-members.html  classTMVATraining.html  classes.html  classnlohmann_1_1basic__json-members.html  classnlohmann_1_1basic__json.html  classnlohmann_1_1byte__container__with__subtype-members.html  classnlohmann_1_1byte__container__with__subtype.html  classnlohmann_1_1detail_1_1binary__reader-members.html  classnlohmann_1_1detail_1_1binary__reader.html  classnlohmann_1_1detail_1_1binary__writer-members.html  classnlohmann_1_1detail_1_1binary__writer.html  classnlohmann_1_1detail_1_1exception-members.html  (+295 more)
docs/latex/: EAL_8h.tex  Sample_8h.tex  Samples_8h.tex  annotated.tex  classA.tex  classAnalysis.tex  classEAL_1_1BackgroundSample.tex  classEAL_1_1Process.tex  classEAL_1_1Sample.tex  classEAL_1_1XML_1_1XMLDocument.tex  classEAL_1_1testClass.tex  classProcess.tex  classTMVAMethod.tex  classTMVATraining.tex  classnlohmann_1_1basic__json.tex  classnlohmann_1_1byte__container__with__subtype.tex  classnlohmann_1_1detail_1_1binary__reader.tex  classnlohmann_1_1detail_1_1binary__writer.tex  classnlohmann_1_1detail_1_1exception.tex  classnlohmann_1_1detail_1_1file__input__adapter.tex  classnlohmann_1_1detail_1_1input__stream__adapter.tex  classnlohmann_1_1detail_1_1invalid__iterator.tex  classnlohmann_1_1detail_1_1iter__impl.tex  classnlohmann_1_1detail_1_1iteration__proxy.tex  classnlohmann_1_1detail_1_1iteration__proxy__value.tex  classnlohmann_1_1detail_1_1iterator__input__adapter.tex  classnlohmann_1_1detail_1_1json__ref.tex  classnlohmann_1_1detail_1_1json__reverse__iterator.tex  classnlohmann_1_1detail_1_1json__sax__acceptor.tex  classnlohmann_1_1detail_1_1json__sax__dom__callback__parser.tex  classnlohmann_1_1detail_1_1json__sax__dom__parser.tex  classnlohmann_1_1detail_1_1lexer.tex  classnlohmann_1_1detail_1_1lexer__base.tex  (+136 more)
include/: EAL.h  EAL.hpp
src/: Analysis.h  EAL.cc  EALanalysis.cc  Preprocessing.h  Process.cc  Process.h  Sample.cc  Sample.h  Samples.cc  Samples.h  Training.h  XMLInterface.cc  test.cc
(+158 files in other folders)
